<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    tools:context="com.richardallenonline.wonders.ui.activity.PlayerScoreCardActivity$PlaceholderFragment" >

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="3" >
        
        <TextView
            style="@style/TextView"
            android:id="@+id/textViewName"
            android:text="@string/name" />

		<ImageView
		    android:id="@+id/imageViewNameScore"
		    style="@style/ImageView"
		    android:contentDescription="@string/name"
		    android:src="@drawable/player" />
            
        <TextView
            style="@style/TextView"
            android:id="@+id/textViewPlayerName" />
        
        <TextView
	    	style="@style/TextView"
	        android:id="@+id/textView2"
	        android:text="@string/military" />
	
		<ImageView
		    android:id="@+id/imageViewMilitaryScore"
		    style="@style/ImageView"
		    android:contentDescription="@string/military"
		    android:src="@drawable/military" />
	            
	    <EditText
	        style="@style/AppLayout"
			android:labelFor="@string/labelfor_military"
			android:hint="@string/hint_military"
	        android:id="@+id/editTextMilitary"
	        android:ems="10"
	        android:inputType="numberSigned" >
	
	        <requestFocus />
		</EditText>
		
	    <TextView
	    	style="@style/TextView"
	        android:id="@+id/textView3"
	        android:text="@string/money" />
	
		<ImageView
		    android:id="@+id/imageViewMoneyScore"
		    style="@style/ImageView"
		    android:contentDescription="@string/money"
		    android:src="@drawable/money" />
	            
	    <EditText
	        style="@style/AppLayout"
			android:labelFor="@string/labelfor_money"
			android:hint="@string/hint_money"
	        android:id="@+id/editTextMoney"
	        android:ems="10"
	        android:inputType="numberSigned" >
	
	        <requestFocus />
		</EditText>
		
	              
		<TextView
	    	style="@style/TextView"
	        android:id="@+id/textView4"
	        android:text="@string/wonder" />
	
		<ImageView
		    android:id="@+id/imageViewWonderScore"
		    style="@style/ImageView"
		    android:contentDescription="@string/wonder"
		    android:src="@drawable/wonder" />
	            
	    <EditText
	        style="@style/AppLayout"
			android:labelFor="@string/labelfor_wonder"
			android:hint="@string/hint_wonder"
	        android:id="@+id/editTextWonder"
	        android:ems="10"
	        android:inputType="numberSigned" >
	
	        <requestFocus />
		</EditText>
		
	    <TextView
	    	style="@style/TextView"
	        android:id="@+id/textView5"
	        android:text="@string/civilian" />
	
		<ImageView
		    android:id="@+id/imageViewCivilianScore"
		    style="@style/ImageView"
		    android:contentDescription="@string/civilian"
		    android:src="@drawable/civilian" />
	            
	    <EditText
	        style="@style/AppLayout"
			android:labelFor="@string/labelfor_civilian"
			android:hint="@string/hint_civilian"
	        android:id="@+id/editTextCivilian"
	        android:ems="10"
	        android:inputType="numberSigned" >
	
	        <requestFocus />
		</EditText>
		
	    <TextView
	    	style="@style/TextView"
	        android:id="@+id/textView6"
	        android:text="@string/commercial" />
	
		<ImageView
		    android:id="@+id/imageViewCommercialScore"
		    style="@style/ImageView"
		    android:contentDescription="@string/commercial"
		    android:src="@drawable/commercial" />
	            
	    <EditText
	        style="@style/AppLayout"
			android:labelFor="@string/labelfor_commercial"
			android:hint="@string/hint_commercial"
	        android:id="@+id/editTextCommercial"
	        android:ems="10"
	        android:inputType="numberSigned" >
	
	        <requestFocus />
		</EditText>
		
	    <TextView
	    	style="@style/TextView"
	        android:id="@+id/textView7"
	        android:text="@string/guild" />
	
		<ImageView
		    android:id="@+id/imageViewGuildScore"
		    style="@style/ImageView"
		    android:contentDescription="@string/guild"
		    android:src="@drawable/guild" />
	            
	    <EditText
	        style="@style/AppLayout"
			android:labelFor="@string/labelfor_guild"
			android:hint="@string/hint_guild"
	        android:id="@+id/editTextGuild"
	        android:ems="10"
	        android:inputType="numberSigned" >
	
	        <requestFocus />
		</EditText>
		
	    <TextView
	    	style="@style/TextView"
	        android:id="@+id/textView8"
	        android:text="@string/science" />
	
		<ImageView
		    android:id="@+id/imageViewScienceScore"
		    style="@style/ImageView"
		    android:contentDescription="@string/science"
		    android:onClick="scienceHelpButton"
		    android:src="@drawable/science" />
	            
	    <EditText
	        style="@style/AppLayout"
	        android:id="@+id/editTextScience"
			android:labelFor="@string/labelfor_science"
			android:hint="@string/hint_science"
	        android:ems="10"
	        android:inputType="numberSigned"	        
	        android:onClick="scienceHelpButton" >
	
	        <requestFocus />
		</EditText>
		
	    <TextView
	    	style="@style/TextView"
	        android:id="@+id/textView9"
	        android:text="@string/leaders" />
	
		<ImageView
		    android:id="@+id/imageViewLeadersScore"
		    style="@style/ImageView"
		    android:contentDescription="@string/leaders"
		    android:src="@drawable/leaders" />
	            
	    <EditText
	        style="@style/AppLayout"
			android:labelFor="@string/labelfor_leaders"
			android:hint="@string/hint_leaders"
	        android:id="@+id/editTextLeaders"
	        android:ems="10"
	        android:inputType="numberSigned" >
	
	        <requestFocus />
		</EditText>
		
	    <TextView
	    	style="@style/TextView"
	        android:id="@+id/textView10"
	        android:text="@string/cities" />
	
		<ImageView
		    android:id="@+id/imageViewCitiesScore"
		    style="@style/ImageView"
		    android:contentDescription="@string/cities"
		    android:src="@drawable/cities" />
	            
	    <EditText
	        style="@style/AppLayout"
			android:labelFor="@string/labelfor_cities"
			android:hint="@string/hint_cities"
	        android:id="@+id/editTextCities"
	        android:ems="10"
	        android:inputType="numberSigned" >
	
	        <requestFocus />
		</EditText>
		
	    <TextView
	    	style="@style/TextView"
	        android:id="@+id/textView11"
	        android:text="@string/debt" />
	
		<ImageView
		    android:id="@+id/imageViewDebtScore"
		    style="@style/ImageView"
		    android:contentDescription="@string/debt"
		    android:src="@drawable/debt" />
	            
	    <EditText
	        style="@style/AppLayout"
			android:labelFor="@string/labelfor_debt"
			android:hint="@string/hint_debt"
	        android:id="@+id/editTextDebt"
	        android:ems="10"
	        android:inputType="numberSigned" >
	
	        <requestFocus />
		</EditText>
		
	    <TextView
	    	style="@style/TextView"
	        android:id="@+id/textView12"
	        android:text="@string/total" />
	
		<ImageView
		    android:id="@+id/imageViewTotalScore"
		    style="@style/ImageView"
		    android:contentDescription="@string/total"
		    android:src="@drawable/compass" />
		
		<TextView
            style="@style/TextView"
            android:id="@+id/textViewTotal" />
        
    </GridLayout>

    <LinearLayout
        style="@style/AppLayout"
        android:orientation="horizontal" >
				
        <Button
	        android:id="@+id/buttonScore"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:onClick="scoreButton"
	        android:text="@string/score" />
	    
	    <Button
	        android:id="@+id/buttonScienceHelp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:onClick="scienceHelpButton"
	        android:text="@string/sciencehelp" />
	    
	    <Button
	        android:id="@+id/buttonBack"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:onClick="backButton"
	        android:text="@string/back" />
        
    </LinearLayout>
</LinearLayout>