<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <ImageView
        android:id="@+id/imageViewAge"
        style="@style/ImageView"
        android:layout_gravity="center"
        android:contentDescription="@string/age1" />
	
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal" >
	    
         <Button
             android:id="@+id/buttonPlayer1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
               
         <TextView
             android:id="@+id/textViewVS"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="10dp"
             android:text="@string/vs" />
         
         <Button
             android:id="@+id/buttonPlayer2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
	    
	</LinearLayout>
	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal" >
	    
         <Button
             android:id="@+id/buttonTie"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/tie" />
         
	    
	</LinearLayout>

</LinearLayout>
